<resources>
    <string name="app_name">Shoe Inventory</string>

    <!-- Login Screen -->

    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>

    <!-- Welcome Screen -->

    <string name="welcome_title">Welcome</string>
    <string name="welcome_subtitle">To The Shoe Inventory</string>
    <string name="go_to_instructions">Go To Instructions</string>

    <!-- Instruction Screen -->

    <string name="instruction_title">Instructions</string>
    <string name="instruction_subtitle">Click on the add button on the inventory screen to add a new shoe.</string>
    <string name="go_to_inventory">Go To Inventory</string>

    <!-- Shoe Detail Screen -->

    <string name="shoe_detail_title">Create New Shoe</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="shoe_detail_name">Name:</string>
    <string name="shoe_detail_size">Size:</string>
    <string name="shoe_detail_company">Company:</string>
    <string name="shoe_detail_description">Description:</string>

</resources>
