<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
        Linear layout used as it is a simple layout of three
        vertically stacked views.
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/instruction_title_text"
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction_title" />

        <TextView
            android:id="@+id/instruction_subtitle_text"
            style="@style/SubtitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction_subtitle"
            android:textSize="26sp"/>

        <Button
            android:id="@+id/go_to_inventory_button"
            style="@style/LoginButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_inventory"
            android:layout_gravity="center"/>


    </LinearLayout>

</layout>