<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="newShoe"
            type="com.udacity.shoestore.models.Shoe" />
        <variable
            name="shoeInventoryViewModel"
            type="com.udacity.shoestore.screens.inventory.ShoeInventoryViewModel" />
    </data>

    <!--
        Constraint layout used here because of the side by side
        cancel/save buttons. I could have used a linear layout
        and then nested another linear layout within it for the
        buttons but I think constraint layout is more suitable here
        and easier to read.
    -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/shoe_detail_title_text"
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_detail_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/shoe_detail_name"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoe_detail_name"
            style="@style/InputTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/shoe_detail_company"
            app:layout_constraintTop_toBottomOf="@+id/shoe_detail_title_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jockey_one"
                android:text="@={newShoe.name}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoe_detail_size"
            style="@style/InputTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/size"
            app:layout_constraintBottom_toTopOf="@+id/shoe_detail_company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_detail_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jockey_one"
                android:inputType="numberDecimal"
                android:text="@={`` + newShoe.size}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoe_detail_company"
            style="@style/InputTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/shoe_detail_description"
            app:layout_constraintTop_toBottomOf="@+id/shoe_detail_size">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jockey_one"
                android:text="@={newShoe.company}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoe_detail_description"
            style="@style/InputTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_detail_company">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jockey_one"
                android:text="@={newShoe.description}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/shoe_detail_cancel_button"
            style="@style/LoginButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginEnd="@dimen/small_margin"
            app:layout_constraintEnd_toStartOf="@+id/shoe_detail_save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_detail_description"
            app:layout_constraintHorizontal_chainStyle="packed" />

        <Button
            android:id="@+id/shoe_detail_save_button"
            style="@style/LoginButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginStart="@dimen/small_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoe_detail_cancel_button"
            app:layout_constraintTop_toTopOf="@+id/shoe_detail_cancel_button"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_detail_cancel_button"
            android:onClick="@{() -> shoeInventoryViewModel.addShoeToInventory(newShoe)}"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>